<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social Radar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="action_signup">Social Radar > Sign Up</string>
    <string-array name="signup_image_option">
        <item>Gallery</item>
        <item>Camera</item>
    </string-array>

    <string name="title_activity_question">Social Radar > Question</string>
    <string name="title_activity_answer">Answer</string>

    <string name="login_page_name">Login</string>
    <string name="email_hint">Email Address</string>
    <string name="login_button_name">Log in</string>
    <string name="login_str">Log in</string>
    <string name="password_hint">Password</string>
    <string name="signup_str"><a href="#">Signup</a></string>
    <string name="intro_signup_msg">Do not have an account?</string>
    <string name="facebook_desc">Login with Facebook user</string>
    <string name="forget_password_msg">Forget your password?</string>
    <string name="loading_str">Loading ... Please wait a moment</string>
    <string name="title_home">Social Radar :: Home</string>
    <string name="title_search">Social Radar > Search</string>

    <string name="result_page">3. Find your Soul mate ?</string>
    <string name="edi_profile">2. Make your profile interested</string>
    <string name="question_page">1. Answer some questions</string>

</resources>
