<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
	<ImageView 
		android:id="@+id/profile_image"
		android:src="@drawable/exit_icon"
		android:layout_width="150dp"
		android:layout_height="150dp"
		android:layout_gravity="center"
	  	android:background="@drawable/picture_border"
	   	/>

    <Button
        android:id="@+id/edit_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/question_page"
        android:gravity="center_vertical|start" />

	<Button
	    android:id="@+id/edit_profile"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	  	android:layout_gravity="center"
        android:gravity="center_vertical|start"
	    android:text="@string/edi_profile"
	/>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center_vertical|start"
        android:text="@string/result_page"
        />

</LinearLayout>


